[package]
name = "cosmos-indexer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_space = "2"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4"
actix-web = {version = "4.2", features = ["rustls"]}
actix-cors = "0.7"
lazy_static = "1.4"
futures = "0.3"
num256 = "0.5"
openssl-probe = "0.1"
tokio = {version="1", features=["rt-multi-thread"]}
cosmos-sdk-proto-althea = "0.13"
sha256 = "1"
prost-types ="0.10"
rocksdb = "0.22"
actix-rt = "2.5.0"
serde_json = "1.0"
json = "0.12.4"
hex = "0.4"
chrono = "0.4.24"
rust_decimal= "1.29.1"
clap = { version = "3.2", features = ["derive"] }

[features]
development = []